more pages, images, partials

--- a/src/components/Abbr.astro
+++ b/src/components/Abbr.astro
@@ -8,6 +8,7 @@ const regex = /(^.*?(?=\())\(([^\)]+)\)/;
 var abbreviations = [];
 
 abbreviations['3G']     = 'third generation';
+abbreviations['AAID']   = 'Android advertising I.D.';
 abbreviations['AC']     = 'additional consent';
 abbreviations['ACH']    = 'automated clearing house';
 abbreviations['AI']     = 'artificial intelligence';
@@ -54,6 +55,7 @@ abbreviations['EEA']    = 'European Economic Area';
 abbreviations['FAST']   = 'free, ad-supported, streaming television';
 abbreviations['FAQ']    = 'frequently asked questions';
 abbreviations['FAQs']   = 'frequently asked questions';
+abbreviations['FB']     = 'Facebook';
 abbreviations['Feb.']   = 'February';
 abbreviations['FX']     = 'foreign transaction';
 abbreviations['GAID']   = 'Google Advertiser Identity';
@@ -71,7 +73,9 @@ abbreviations['IAS']    = 'Integral Ad Science';
 abbreviations['ID']     = 'identifier';
 abbreviations['IDE']    = 'integrated development environment';
 abbreviations['IDFA']   = 'identifier for advertisers';
+abbreviations['IDFAs']  = 'identifiers for advertisers';
 abbreviations['IDFV']   = 'identifier for vendors';
+abbreviations['IDFVs']  = 'identifiers for vendors';
 abbreviations['IFA']    = 'identifier for advertisers';
 abbreviations['IMPDAU'] = 'Impressions Per Daily Active User';
 abbreviations['Inc.']   = 'incorporated';
@@ -81,6 +85,7 @@ abbreviations['IP']     = 'Internet Protocol';
 abbreviations['IPM']    = 'installs per mille';
 abbreviations['IPv4']   = 'Internet Protocol, version 4';
 abbreviations['IPv6']   = 'Internet Protocol, version 6';
+abbreviations['IQG']    = 'Inventory Quality Guidelines';
 abbreviations['IR']     = 'Install Rate';
 abbreviations['ISP']    = 'Internet Service Provider';
 abbreviations['IVT']    = 'invalid traffic';
@@ -105,6 +110,7 @@ abbreviations['MMP']    = 'mobile measurement partner';
 abbreviations['MPX']    = 'MoPub Exchange';
 abbreviations['MRAID']  = 'Mobile Rich Media Ad Interface Definitions';
 abbreviations['MREC']   = 'medium rectangle';
+abbreviations['MRECs']  = 'medium rectangles';
 abbreviations['ms']     = 'milliseconds';
 abbreviations['MVP']    = 'minimum viable product';
 abbreviations['OEM']    = 'original equipment manufacturer';
@@ -140,6 +146,7 @@ abbreviations['TCF']    = 'Transparency &amp; Consent Framework';
 abbreviations['TV']     = 'television';
 abbreviations['UA']     = 'user agent';
 abbreviations['UI']     = 'user interface';
+abbreviations['UID2']   = 'Unified Identifier 2.0';
 abbreviations['UK']     = 'United Kingdom';
 abbreviations['UMP']    = 'User Messaging Platform';
 abbreviations['UPL']    = 'Unreal Plugin Language';
